--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,15 @@
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
-				<li><a class="active" href="#">Каталог</a></li>
+				<li><a class="active" href="#">Каталог</a>
+					<ul class="sub-menu-catalog">
+							<li><a href="#">Новинки</a></li>
+							<li class="active-page"><a>Сливочное</a></li>
+							<li><a href="#">Щербеты</a></li>
+							<li><a href="#">Фрукторый лед</a></li>
+							<li><a href="#">Мелорин</a></li>
+					</ul>
+					</li>
 				<li class="border-li-two"><a href="#">Доставка и оплата</a></li>
 				<li class="border-li-tree"><a href="#">О Компании</a></li>
 			  </ul>
@@ -29,9 +37,9 @@
 				<!--Блок хлебных крошек-->
 			<div class="breadcrumbs">
 				<ul class="bread-main-nav">
-					<li><a href="#">Главная</a></li>
+					<li><a href="./index.html">Главная</a></li>
 					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Сливочное</a></li>
+					<li>Сливочное</li>
 				</ul>
 			<!--/Блок хлебных крошек-->
 			</div>
@@ -97,7 +105,7 @@
 	<!--Блок ассортимента мороженных-->
 	<div class="goods clearfix">
 			<div class="case-catalog">
-				<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+				<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 				<div class="btn-hover-shadow">	
@@ -105,7 +113,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+				<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 				<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><br>
 				<div class="btn-hover-shadow">
@@ -113,7 +121,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+				<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 				<div class="btn-hover-shadow">
@@ -121,7 +129,7 @@
 				</div>	
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+				<img src="img/ice_4.jpg" width="267" height="267" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
 				<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 				<div class="btn-hover-shadow">
@@ -129,7 +137,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+				<img src="img/ice_5.jpg" width="267" height="267" class="big-ice" alt="Сливочное с брусничным джемом">
 				<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с брусничным джемом</a>
 				<div class="btn-hover-shadow">
@@ -137,7 +145,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+				<img src="img/ice_6.jpg" width="267" height="267" class="big-ice" alt="Сливочно-черничное с цельными ягодами черники">
 				<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div class="btn-hover-shadow">
@@ -145,7 +153,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+				<img src="img/ice_7.jpg" width="267" height="267" class="big-ice" alt="Сливочно-лимонное с карамельной присыпкой">
 				<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div class="btn-hover-shadow">
@@ -153,7 +161,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+				<img src="img/ice_8.jpg" width="267" height="267" class="big-ice" alt="Сливочное с шоколадной стружкой">
 				<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
 				<div class="btn-hover-shadow">
@@ -161,7 +169,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+				<img src="img/ice_9.jpg" width="267" height="267" class="big-ice" alt="Сливочно-ванильное с кусочками шоколада">
 				<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div class="btn-hover-shadow">
@@ -169,7 +177,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+				<img src="img/ice_10.jpg" width="267" height="267" class="big-ice" alt="Сливочное с ментоловым сиропом">
 				<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
 				<div class="btn-hover-shadow">
@@ -177,7 +185,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+				<img src="img/ice_11.jpg" width="267" height="267" class="big-ice" alt="Сливочное с кусочками черного шоколада">
 				<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
 				<div class="btn-hover-shadow">
@@ -185,7 +193,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+				<img src="img/ice_12.jpg" width="267" height="267" class="big-ice" alt="Сливочное с мятным сиропом">
 				<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 				<a class="specification" href="#">Сливочное с мятным сиропом</a>
 				<div class="btn-hover-shadow">
@@ -209,7 +217,7 @@
 	</main>
 	<!--Блок подвала-->
 	<footer class="footer-catalog">
-		<div class="container clearfix">
+		<div class="container clearfix border">
 			<section class="footer-social">
 				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
 				<a class="social-btn social-btn-inst" href="https://instagram.com">Инстаграм</a>
