--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 			  </ul>
 			</nav>
 			<div class="user-block">
-				<a class="search" href="#">Поиск</a>
+				<a class="search modal-searching" href="#">Поиск</a>
 				<a class="login" href="#">Вход</a>
 				<a class="basket" href="#">Пусто</a>
 			</div>
 			<div class="timework-tel">
-				<span class="timework">С 10 до 20, ежедневно</span><br>
+				<span class="timework">С 10 до 20, ежедневно</span>
 				<span class="tel">8 812 450-25-25</span>
 			</div>
 		</div>
