Сделал форму наличия товара

--- a/catalog.html
+++ b/catalog.html
@@ -261,19 +261,24 @@
 		<!--Форма наличия товара в корзине-->
 	<div class="order-in-basket">
 		<form>
-			<section class="ice-order">
+		<p class="order-page"><img src="./img/check_off_order.png" width="10" height="10" class="order-bnt-cancel" alt="Иконка удаления мороженого"><img src="./img/ice_order_one.png" width="33" height="33" class="order-img-ice" alt="Иконка заказанного мороженого"><span class="order-name-ice">Пломбир с апельсиновым джемом</span> 1,5 кг х <span class="order-price-ice">200 руб.</span> 300 руб.</p>
+		<p class="order-page"><img src="./img/check_off_order.png" width="10" height="10" class="order-bnt-cancel" alt="Иконка удаления мороженого"><img src="./img/ice_order_two.png" width="33" height="33" class="order-img-ice" alt="Иконка заказанного мороженого"><span class="order-name-ice">Клубничный пломбир с присыпкой из белого шоколада</span> 1,5кг х <span class="order-price-ice">300 руб.</span> 450 руб.</p>
+		<hr>
+		<p class="order-all-price">Итого: 750 руб.</p>
+		
+			<!--<section class="ice-order">
 				<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Пломбир с апельсиновым джемом</label>
 				<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="300"><label>руб.</label>
 			</section>
 			<section class="ice-order">
 				<input type="checkbox" name="ice-order" id="order-two" checked><label class="name-ice-order" for="order-one">Клубничный пломбир с присыпкой из белого шоколада</label>
 				<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="450"><label>руб.</label>
-			</section>
+			</section>-->
 			<!--<ul class="number-ice-in">
 				<li>Пломбир с апельсиновым джемом 1,5 кг х 200 руб. 300 руб.</li>
 				<li>Клубничный пломбир с присыпкой из белого шоколада 1,5кг 300 руб. 450 руб.</li>
 			</ul>-->
-			<label>Итого:<input type="text" name="total price" value="750"> руб.</label>
+			<!--<label>Итого:<input type="text" name="total price" value="750"> руб.</label>-->
 			<button class="btn-make-order" type="submit" title="Оформить заказ">Оформить заказ</button>
 		</form>
 	</div>
