не получаетс с логином

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,14 @@
 			  </ul>
 			</nav>
 			<div class="user-block ">
-				<a class="search" href="#">Поиск</a>
+				<a class="search" href="#">Поиск
+				<!--Форма поиска-->
+					<div class="modal-search">
+						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+							<input class="search" type="search" name="search" placeholder="Что ищем?">
+						</form>
+					</div><!--/Форма поиска-->
+				</a>
 				<a class="login" href="#">Вход</a>
 				<a class="basket-bye-ice" href="#">2 товара</a>
 			</div>
@@ -240,13 +247,7 @@
 		</div>
 	</footer><!--/Блок подвала-->
 	<!--Модальные формы-->
-		<!--Форма поиска-->
-	<div class="modal-search">
-		<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-			<input class="search" type="search" name="search" placeholder="Что ищем?">
-		</form>
-	</div><!--/Форма поиска-->
-		<!--Форма входа-->
+	<!--Форма входа-->
 	<div class="modal-in">
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
 			<input class="email" type="email" name="email" placeholder="Электронная почта">
