сместил форму входа

--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
 			</nav>
 			<div class="user-block">
 				<a class="search" href="#">Поиск
-				<!--Форма поиска-->
-					<div class="modal-search">
+					<div class="modal-search"><!--Форма поиска-->
 						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
 						<input class="search" type="search" name="search" placeholder="Что ищем?">
 						</form>
 					</div><!--/Форма поиска-->
 				</a>
 				<a class="login" href="#">Вход
-				<!--Форма входа-->
-					<div class="modal-in">
+					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
 							<input class="email" type="email" name="email" placeholder="Электронная почта">
 							<input class="password" type="password"  name="password" placeholder="Пароль">
@@ -56,8 +54,7 @@
 						</section>
 					</div><!--Форма входа-->
 				</a>
-				<a class="basket" href="#">Пусто</a>
-				
+				<a class="basket" href="#">Пусто</a>	
 			</div>
 			<div class="timework-tel">
 				<span class="timework">С 10 до 20, ежедневно</span>
