--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 						</form>
 					</div><!--/Форма поиска-->
 				</a>
-				<a class="login" href="#">Вход
+				<div class="link-modal-in">
+				<a class="login" href="#">Вход</a>
 					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
 							<input class="email" type="email" name="email" placeholder="Электронная почта">
@@ -53,7 +54,8 @@
 							<a class="registration" href="#">Новая регистрация</a>
 						</section>
 					</div><!--Форма входа-->
-				</a>
+				
+				</div>
 				<a class="basket" href="#">Пусто</a>	
 			</div>
 			<div class="timework-tel">
