не появляется модалка входа

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</form>
 					</div><!--/Форма поиска-->
 				</a>
-				<div class="link-modal-in">
+				<div class="link-odal">
 				<a class="login" href="#">Вход</a>
 					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
@@ -54,14 +54,13 @@
 							<a class="registration" href="#">Новая регистрация</a>
 						</section>
 					</div><!--Форма входа-->
-				
 				</div>
-				<a class="basket" href="#">Пусто</a>	
-			</div>
+				<a class="basket" href="#">Пусто</a>				
+			</div>	
 			<div class="timework-tel">
-				<span class="timework">С 10 до 20, ежедневно</span>
-				<span class="tel">8 812 450-25-25</span>
-			</div>
+					<span class="timework">С 10 до 20, ежедневно</span>
+					<span class="tel">8 812 450-25-25</span>
+			</div>	
 		</div>
 	<!--/Блок шапки-->
 	</header>
