--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,21 @@
 						</form>
 					</div><!--/Форма поиска-->
 				</a>
+				<div class="link-modal-in">
 				<a class="login" href="#">Вход</a>
+					<div class="modal-in"><!--Форма входа-->
+						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
+							<input class="email" type="email" name="email" placeholder="Электронная почта">
+							<input class="password" type="password"  name="password" placeholder="Пароль">
+							<button class="btn-modal-in" type="submit" title="Войти">Войти</button>
+						</form>
+						<section class="restore-registration">
+							<a class="restore" href="#">Забыли пароль?</a><br>
+							<a class="registration" href="#">Новая регистрация</a>
+						</section>
+					</div><!--Форма входа-->
+				
+				</div>
 				<a class="basket-bye-ice" href="#">2 товара</a>
 			</div>
 				<!--Блок хлебных крошек-->
