--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</form>
 					</div><!--/Форма поиска-->
 				</a>
-				<div class="link-odal">
+				<div class="link-modal">
 				<a class="login" href="#">Вход</a>
 					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
