не встают в ряд блоки

--- a/catalog.html
+++ b/catalog.html
@@ -60,33 +60,12 @@
 							<p class="order-page"><img src="./img/check_off_order.png" width="10" height="10" class="order-bnt-cancel" alt="Иконка удаления мороженого"><img src="./img/ice_order_two.png" width="33" height="33" class="order-img-ice" alt="Иконка заказанного мороженого"><span class="order-name-ice">Клубничный пломбир с присыпкой из белого шоколада</span> 1,5 кг х <span class="order-price-ice">300 руб.</span> 450 руб.</p>
 							<hr>
 							<p class="order-all-price">Итого: 750 руб.</p>
-								<!--<section class="ice-order">
-									<input type="checkbox" name="ice-order" id="order-one" checked><label class="name-ice-order" for="order-one">Пломбир с апельсиновым джемом</label>
-									<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="300"><label>руб.</label>
-								</section>
-								<section class="ice-order">
-									<input type="checkbox" name="ice-order" id="order-two" checked><label class="name-ice-order" for="order-one">Клубничный пломбир с присыпкой из белого шоколада</label>
-									<label>1,5 кг х </label><input type="text" name="grey-price" value="300"><label>руб.</label><input type="text" name="price" value="450"><label>руб.</label>
-								</section>-->
-								<!--<ul class="number-ice-in">
-									<li>Пломбир с апельсиновым джемом 1,5 кг х 200 руб. 300 руб.</li>
-									<li>Клубничный пломбир с присыпкой из белого шоколада 1,5кг 300 руб. 450 руб.</li>
-								</ul>-->
-								<!--<label>Итого:<input type="text" name="total price" value="750"> руб.</label>-->
 								<button class="btn-make-order" type="submit" title="Оформить заказ">Оформить заказ</button>
 							</form>
 						</div>
 				</div>
 			</div>
-				<!--Блок хлебных крошек-->
-			<div class="breadcrumbs">
-				<ul class="bread-main-nav">
-					<li><a href="./index.html">Главная</a></li>
-					<li><a href="#">Каталог</a></li>
-					<li>Сливочное</li>
-				</ul>
-			<!--/Блок хлебных крошек-->
-			</div>
+
 			<div class="timework-tel">
 				<span class="timework">С 10 до 20, ежедневно</span><br>
 				<span class="tel">8 812 450-25-25</span>
@@ -99,6 +78,14 @@
 
 	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice clearfix">
+		<!--Блок хлебных крошек-->
+		<div class="breadcrumbs">
+			<ul class="bread-main-nav">
+				<li><a href="./index.html">Главная</a></li>
+				<li><a href="#">Каталог</a></li>
+				<li>Сливочное</li>
+			</ul>
+		</div><!--/Блок хлебных крошек-->
 		<h2>Сливочное мороженое</h2>
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<div class="sorting">
