отредактирова подменю и часть модальных форм

--- a/catalog.html
+++ b/catalog.html
@@ -25,8 +25,8 @@
 							<li><a href="#">Мелорин</a></li>
 					</ul>
 					</li>
-				<li class="border-li-two"><a href="#">Доставка и оплата</a></li>
-				<li class="border-li-tree"><a href="#">О Компании</a></li>
+				<li class="border-li-two"><a class="border-li-one-page" href="#">Доставка и оплата</a></li>
+				<li class="border-li-tree"><a class="border-li-one-page" href="#">О Компании</a></li>
 			  </ul>
 			</nav>
 			<div class="user-block ">
@@ -65,7 +65,6 @@
 						</div>
 				</div>
 			</div>
-
 			<div class="timework-tel">
 				<span class="timework">С 10 до 20, ежедневно</span><br>
 				<span class="tel">8 812 450-25-25</span>
@@ -75,17 +74,17 @@
 	</header>
 	<!--Содержание основного блока-->
 	<main class="container">
-
+	<!--Блок хлебных крошек-->
+	<div class="breadcrumbs">
+		<ul class="bread-main-nav">
+			<li><a href="./index.html">Главная</a></li>
+			<li><a href="#">Каталог</a></li>
+			<li>Сливочное</li>
+		</ul>
+	</div><!--/Блок хлебных крошек-->
 	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice clearfix">
-		<!--Блок хлебных крошек-->
-		<div class="breadcrumbs">
-			<ul class="bread-main-nav">
-				<li><a href="./index.html">Главная</a></li>
-				<li><a href="#">Каталог</a></li>
-				<li>Сливочное</li>
-			</ul>
-		</div><!--/Блок хлебных крошек-->
+
 		<h2>Сливочное мороженое</h2>
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<div class="sorting">
