--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
-				<li class="border-li-one"><a href="#">Каталог</a>
+				<li class="border-li-one"><a class="border-li-one-page" href="#">Каталог</a>
 					<ul class="sub-menu-catalog">
 						<li><a href="#">Новинки</a></li>
 						<li><a href="./catalog.html">Сливочное</a></li>
@@ -29,8 +29,8 @@
 						<li><a href="#">Мелорин</a></li>
 					</ul>
 				</li>
-				<li class="border-li-two"><a href="#">Доставка и оплата</a></li>
-				<li class="border-li-tree"><a href="#">О Компании</a></li>
+				<li class="border-li-two"><a class="border-li-one-page" href="#">Доставка и оплата</a></li>
+				<li class="border-li-tree"><a class="border-li-one-page" href="#">О Компании</a></li>
 			  </ul>
 			</nav>
 			<div class="user-block">
