удалил лишние комменты

--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
 			  </ul>
 			</nav>
 			<div class="user-block">
-				<a class="search" href="#">Поиск
+				<div class="link-modal-search">
+					<a class="search" href="#">Поиск</a>
 					<div class="modal-search"><!--Форма поиска-->
 						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
 						<input class="search" type="search" name="search" placeholder="Что ищем?">
 						</form>
 					</div><!--/Форма поиска-->
-				</a>
-				<div class="link-modal">
+				</div>
+				<div class="link-modal-in">
 					<a class="login" href="#">Вход</a>
 					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
@@ -215,8 +216,6 @@
 	<!--/Блок подвала-->
 	</div><!--/site-wrapper-->
 	<!--Модальные формы-->
-	
-	
 		<!--Форма карты-->
 	<div class="modal-map">
 		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
