--- a/catalog.html
+++ b/catalog.html
@@ -30,15 +30,15 @@
 			  </ul>
 			</nav>
 			<div class="user-block ">
-				<a class="search" href="#">Поиск
-				<!--Форма поиска-->
-					<div class="modal-search">
+				<div class="link-modal-search">
+					<a class="search" href="#">Поиск</a>
+					<div class="modal-search"><!--Форма поиска-->
 						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-							<input class="search" type="search" name="search" placeholder="Что ищем?">
+						<input class="search" type="search" name="search" placeholder="Что ищем?">
 						</form>
 					</div><!--/Форма поиска-->
-				</a>
-				<div class="link-modal">
+				</div>
+				<div class="link-modal-in">
 					<a class="login" href="#">Вход</a>
 					<div class="modal-in"><!--Форма входа-->
 						<form class="login-form" action="https://echo.htmlacademy.ru" method="get">
