--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</nav>
 			<div class="user-block">
 				<div class="link-modal-search">
-					<a class="search" href="#">Поиск</a>
+					<a class="search" href="#"></a>
 					<div class="modal-search"><!--Форма поиска-->
 						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
 						<input class="search" type="search" name="search" placeholder="Что ищем?">
