не работает карта

--- a/catalog.html
+++ b/catalog.html
@@ -307,6 +307,7 @@
 		</section>
     </div><!--Форма входа-->
 		<!--Форма наличия товара в корзине-->
-
+	<script src="js/jquery.js"></script>
+	<script src="js/script.js"></script>
   </body>
 </html>
