--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	</div>
 	</main>
 	<!--Блок проезда-адреса-->
-	<div class="driving-address container-map">
+	<div class="driving-address container-map js-map-open">
 		<div class="driving">
 			<div class="top-lines">
 			<span class="line-1">Адрес главного офиса<br>
@@ -197,6 +197,12 @@
 			<a class="btn-feedback" href="#">Форма обратной связи</a>
 		</div>
 	<!--/Блок проезда-адреса-->	
+	<div class="modal-map"><!--Форма карты-->
+		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894616295742!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487374363536" width="1200" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<!--<div id="yandex-map"></div>-->
+    </div><!--/Форма карты-->
+	<!--<div class="map-overlay"></div>-->
 	</div>
 	<!--Блок подвала-->
 	<footer>
@@ -224,11 +230,8 @@
 	<!--/Блок подвала-->
 	</div><!--/site-wrapper-->
 	<!--Модальные формы-->
-		<!--Форма карты-->
-	<div class="modal-map">
-		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
-		<div id="yandex-map"></div>
-    </div><!--/Форма карты-->
+	
+
 		<!--Форма обратной связи-->
 	<div class="modal-feedback">
 		<button class="btn-modal-feedback-close" type="button" title="Закрыть">Закрыть</button>
@@ -240,6 +243,7 @@
 			<button class="btn-modal-feedback" type="submit" title="Отправить">Отправить</button>
 		</form>
 	</div><!--/Форма обратной связи-->
-	<!--<div class="map-overlay"></div>-->
+	<script src="js/jquery.js"></script>
+	<script rel="stylesheet" type="text/css" src="js/script.js"></script>
   </body>
 </html>
