--- a/index.html
+++ b/index.html
@@ -244,6 +244,6 @@
 		</form>
 	</div><!--/Форма обратной связи-->
 	<script src="js/jquery.js"></script>
-	<script rel="stylesheet" type="text/css" src="js/script.js"></script>
+	<script rel="stylesheet" type="text/js" src="js/script.js"></script>
   </body>
 </html>
