добавил JS на открытие формы обратной связи

--- a/index.html
+++ b/index.html
@@ -197,12 +197,7 @@
 			<a class="btn-feedback" href="#">Форма обратной связи</a>
 		</div>
 	<!--/Блок проезда-адреса-->	
-	<div class="modal-map"><!--Форма карты-->
-		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894616295742!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487374363536" width="1200" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
-		<!--<div id="yandex-map"></div>-->
-    </div><!--/Форма карты-->
-	<!--<div class="map-overlay"></div>-->
+	
 	</div>
 	<!--Блок подвала-->
 	<footer>
@@ -229,11 +224,17 @@
 	</footer>
 	<!--/Блок подвала-->
 	</div><!--/site-wrapper-->
-	<!--Модальные формы-->
 	
-
-		<!--Форма обратной связи-->
-	<div class="modal-feedback">
+	<!--Модальные формы-->
+	<div class="modal-map"><!--Форма карты-->
+		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894616295742!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487374363536" width="1200" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<!--<div id="yandex-map"></div>-->
+    </div><!--/Форма карты-->
+	
+	<!--<div class="map-overlay"></div>-->
+		
+	<div class="modal-feedback"><!--Форма обратной связи-->
 		<button class="btn-modal-feedback-close" type="button" title="Закрыть">Закрыть</button>
 		<h2>Мы обязательно вам ответим!</h2>
 		<form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
@@ -244,6 +245,6 @@
 		</form>
 	</div><!--/Форма обратной связи-->
 	<script src="js/jquery.js"></script>
-	<script rel="stylesheet" type="text/js" src="js/script.js"></script>
+	<script src="js/script.js"></script>
   </body>
 </html>
