сделал некоторую защиту от переполнения

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	<!--Блок описания компании-->
 	<div class="description clearfix">
 		<div class="about">
-			<span>Магазин Глейси &mdash; это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</span>
+			<span>Магазин <span class="letter-spacing">Г</span>лейси &mdash; это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</span>
 		</div>
 		<div class="make">
 			<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
@@ -166,7 +166,7 @@
 	<div class="news-sub clearfix">
 		<section class="news">		
 			<p>Новое в нашем блоге</p>
-			<a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+			<a href="#"><span class="letter-spacing">10</span> способов сервировки фруктовых щербетов к столу</a>
 		</section>
 		<section class="sub">
 		<div class="white-layer">
